...
                          //Remove This styles
                          fontSize: 16.sp,
                          fontWeight: FontWeight.w600,
                        ),
                      ),
                TextSpan(
                  text: 'Looking for Jobs?',
                  style: TextStyle(
                      fontWeight: FontWeight.bold,
                      fontSize: 18.sp), //remove fontsize
                ),
              ],
            ),
...
