...
                  ),
                  const Spacer(),
                  SizedBox(
                    width: double.infinity,
                    height: getProportionateScreenHeight(56),
                    child: defaultButton(
                      key: const Key("btnContinue"),
                      press: () {
                        Navigator.pushNamed(context, "/login");
                      },
                      text: "Continue",
                    ),
                  )
...
