...
                          height: 10,
                        ),
                        Row(
                          mainAxisAlignment: MainAxisAlignment.spaceBetween,
                          children: [
                            const Text(
                              "Application Status:",
                              style: TextStyle(
                                fontSize: 16,
                              ),
                            ),
                            Text(
                              "${appliedJob?.status}",
...
                                  key: const Key("applyKey"),
                                  onTap: isLoading ? () {} : applyForJob,
                                  child: isLoading
                                      ? const CircularProgressIndicator()
                                      : Center(
                                          child: Text(
                                            'Apply Now',
                                            style: kTitleTextStyle.copyWith(
                                              color: Colors.white,
                                            ),
                                          ),
                                        ),
                                ),
...
