...
}

class _CreateGroupState extends State<CreateGroup> {
  //generate list of random chatmodel objects
  List<ChatModel> chats = [
    ChatModel(
      name: 'Chirag Simkhada',
      icon: 'assets/icons/real.png',
      isGroup: false,
      time: '5:55',
      currentMessage: 'Hello how are you?',
    ),
    ChatModel(
...
                      selectedChats.add(chats[index - 1]);
                      chats[index - 1].select = true;
                    }
                  });
                },
                child: ContactCard(
                  chat: chats[index - 1],
                ),
              );
            },
          ),
          selectedChats.isNotEmpty
              ? Column(
...
