...
                        ),
                        child: TextFormField(
                          style: TextStyle(
                            fontSize: 15.sp,
                            color: Get.isDarkMode ? Colors.white : Colors.black,
                          ),
                          key: const Key("messageBox"),
                          controller: _msgController,
                          textAlignVertical: TextAlignVertical.center,
                          keyboardType: TextInputType.multiline,
                          maxLines: 5,
                          minLines: 1,
                          decoration: InputDecoration(
...
